# DocsGuard

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.es.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: ANALISIS_EXPANSION_PRODUCTO.md  api.md  blueprint.md
fixtures/: example.md  example.ts
npm/: install.js  package-lock.json  package.json  run.js
src/: coverage.rs  main.rs
src/baseline/: mod.rs
src/core/: heuristic.rs  mod.rs  types.rs  validator.rs
src/interactive/: mod.rs
src/parser/: code_parser.rs  doc_parser.rs  mod.rs
src/parser/lang/: c_sharp.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/watch/: mod.rs
